# Raytracer

./: .gitignore  CMakeLists.txt
include/: vec3.h
src/: main.cpp  test.cpp  vec3.cpp
